<resources>
    <string name="app_name">Doe +</string>

    <!-- Login Screen-->
    <string name="button_login">Entrar</string>
    <string name="button_subscribe">Criar uma nova conta</string>
    <string name="hint_user">Usuário</string>
    <string name="hint_password">Senha</string>

    <!-- ChooseUserType -->
    <string name="title_choose_user_type">Escolha tipo do usuário</string>

    <!-- CampaignList -->
    <string name="hint_search">Pesquisar</string>
    <string name="filter">Filtrar</string>
    <string name="dialog_distance_title">Selecionar distância</string>
    <string name="dialog_distance_btn">Selecionar</string>

    <!-- Register -->
    <string name="title_register">Cadastre-se</string>
    <string name="hint_name">Nome</string>
    <string name="button_register">Cadastrar</string>
    <string name="title_receive_donations">Receber doações</string>
    <string name="message_receive_donations">Para receber doações será necessário confirmar suas informações</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_confirm">Confirmar</string>

    <!-- Tab -->
    <string name="nav_user_info">Suas informações</string>
    <string name="nav_add_ticket">Adicionar cupom</string>
    <string name="nav_campaigns">Campanhas de doação</string>
    <string name="nav_add_campaign">Criar campanha</string>
    <string name="nav_partners">Parceiros</string>
    <string name="nav_add_partner">Adicionar Parceiro</string>
    <string name="nav_manage">Permissao de usuários</string>
    <string name="nav_generate_ticket">Gerar cupom</string>
    <string name="nav_exit">Sair</string>

    <string-array name="tabs">
        <item name="nav_user_info">@string/nav_user_info</item>
        <item name="nav_add_ticket">@string/nav_add_ticket</item>
        <item name="nav_campaigns">@string/nav_campaigns</item>
        <item name="nav_add_campaign">@string/nav_add_campaign</item>
        <item name="nav_partners">@string/nav_partners</item>
        <item name="nav_add_partner">@string/nav_add_partner</item>
        <item name="nav_manage">@string/nav_manage</item>
        <item name="nav_generate_ticket">@string/nav_generate_ticket</item>
        <item name="nav_exit">@string/nav_exit</item>
    </string-array>

    <!-- Create campaign -->
    <string name="hint_campaign_name">Nome da campanha</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="label_location">Localização:</string>
    <string name="location_not_selected">Nenhum local selecionado!</string>
    <string name="button_create_campaign">Criar campanha</string>
    <string name="create_campaign_success_message">Sua campanha foi criada com sucesso!</string>
    <string name="title_activity_create_campaign">Criação de Campanha</string>

    <!-- Create partner -->
    <string name="hint_partner_name">Nome do parceiro</string>
    <string name="button_create_partner">Criar parceiro</string>
    <string name="create_partner_success_message">O parceiro foi criado com sucesso!</string>
    <string name="title_activity_create_partner">Criação de Parceiro</string>

    <!-- Add Ticket Fragment -->
    <string name="add_ticket_fragment_scan">Scanear Cupom</string>
    <string name="add_ticket_fragment_cancel">Cancelar</string>
    <string name="add_ticket_fragment_add_ticket">Adicionar Cupom</string>

    <!-- Pick Location -->
    <string name="title_activity_pick_location">Selecionar Localização</string>
    <string name="btn_pick_location">Selecionar</string>

    <!-- Manage Campaigns -->
    <string name="my_campaigns">Minhas Campanhas</string>
    <string name="create_campaign">Criar Campanha</string>

    <!-- Campaign Details -->
    <string name="title_activity_campaign_details">Detalhes da Campanha</string>
    <plurals name="button_donate_messages">
        <item quantity="one">Doar %1$s real</item>
        <item quantity="other">Doar %1$s reais</item>
    </plurals>
    <string name="text_user_balance_unavailable">Indisponível</string>
    <plurals name="text_user_balance">
        <item quantity="other">R$ %1$s,00</item>
    </plurals>
    <string name="donate_success_message">Obrigado pela sua doação!</string>

    <!-- Add Ticket -->
    <string name="title_activity_add_ticket">Adicionar Cupom</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">É necessário o acesso a sua localização atual</string>
    <string name="location_permission_denied">Para utilizar esta funcionalidade é necessário habilitar a permissão de localização.</string>
    <string name="permission_required_toast">Sua localização é necessária para esta funcionalidade.</string>

    <!-- Barcode -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="title_activity_home">Doe+</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Manage Partners -->
    <string name="my_partners">Meus Parceiros</string>
    <string name="create_partner">Criar Parceiro</string>

    <!-- Partner Details -->
    <string name="title_activity_partner_details">Detalhes do Parceiro</string>

    <!-- Generic Items -->
    <string name="action_search">Pesquisar</string>
    <string name="search_hint">Pesquisar</string>

    <!-- SearchActivity -->
    <string name="title_activity_search">Pesquisa</string>

    <!-- MapActivity -->
    <string name="title_activity_map">Mapa</string>

    <!-- EditUserRolesActivity -->
    <string name="title_activity_edit_user_roles">Permissões do usuário</string>

    <string-array name="roles">
        <item name="login">login</item>
        <item name="admin">admin</item>
        <item name="create_campaign">create_campaign</item>
        <item name="create_partner">create_partner</item>
        <item name="add_ticket">add_ticket</item>
        <item name="edit_role">edit_role</item>
        <item name="generate_ticket">generate_ticket</item>
    </string-array>

</resources>
