<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_info"
            android:icon="@drawable/ic_person_black_24px"
            android:title="@string/nav_user_info" />
        <item
            android:id="@+id/nav_campaigns"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/nav_campaigns" />
        <item
            android:id="@+id/nav_partners"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/nav_partners" />
        <item
            android:id="@+id/nav_add_ticket"
            android:icon="@drawable/ic_loyalty_black_24dp"
            android:title="@string/nav_add_ticket" />
        <item
            android:id="@+id/nav_add_campaign"
            android:icon="@drawable/ic_add_box_black_24px"
            android:title="@string/nav_add_campaign" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_manage" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
